--- a/ContactApp/Views/Contact/AddEdit.cshtml
+++ b/ContactApp/Views/Contact/AddEdit.cshtml
@@ -5,16 +5,16 @@
 <form class="mt-5" asp-action="AddEdit" method="post">
     <div asp-validation-summary="All"></div>
     <div class="form-floating mb-3">
-        <input class="form-control" id="floatingFirstName" asp-for="FirstName" placeholder="First Name">
-        <label for="floatingFirstName" asp-for="FirstName">First Name</label>
+        <input class="form-control" id="floatingFirstName" asp-for="FirstName" placeholder="ad">
+        <label for="floatingFirstName" asp-for="FirstName">Ad</label>
     </div>
     <div class="form-floating mb-3">
-        <input class="form-control" id="floatingLastName" asp-for="LastName" placeholder="Last Name">
-        <label for="floatingLastName" asp-for="LastName">Last Name</label>
+        <input class="form-control" id="floatingLastName" asp-for="LastName" placeholder="soyad">
+        <label for="floatingLastName" asp-for="LastName">Soyad</label>
     </div>
     <div class="form-floating mb-3">
-        <input class="form-control" id="floatingPhoneNumber" asp-for="PhoneNumber" placeholder="Phone Number">
-        <label for="floatingLastName" asp-for="PhoneNumber">Phone Number</label>
+        <input class="form-control" id="floatingPhoneNumber" asp-for="PhoneNumber" placeholder="telefon numarası">
+        <label for="floatingLastName" asp-for="PhoneNumber">Telefon</label>
     </div>
     <div class="form-floating mb-3">
         <input class="form-control" id="floatingEmail" asp-for="Email" placeholder="Email">
@@ -30,7 +30,7 @@
         </select>
     </div>
     <input type="hidden" asp-for="ContactId" />
-    <button type="submit" class="btn btn-success mt-4">Save</button>
+    <button type="submit" class="btn btn-success mt-4">Kaydet</button>
 
 
 </form>
