--- a/ContactApp/Views/Contact/Delete.cshtml
+++ b/ContactApp/Views/Contact/Delete.cshtml
@@ -4,6 +4,6 @@
 }
 <form asp-action="delete" method="post">
     <input type="hidden" asp-for="ContactId" />
-    <h2>Are you sure you want to delete @Model.FirstName @Model.LastName ?</h2>
-    <button type="submit" class="btn btn-danger">Delete</button>
+    <h2>Silmek istediğinizden eminmisiniz @Model.FirstName @Model.LastName ?</h2>
+    <button type="submit" class="btn btn-danger">Sil/button>
 </form>
