--- a/ContactApp/Views/Contact/Details.cshtml
+++ b/ContactApp/Views/Contact/Details.cshtml
@@ -5,7 +5,7 @@
 <table class="table table-striped">
     <tr>
         <th>
-            First Name
+            Ad
         </th>
         <td>
             @Html.DisplayFor(model => model.FirstName)
@@ -13,7 +13,7 @@
     </tr>
     <tr>
         <th>
-            Last Name
+            Soyad
         </th>
         <td>
             @Html.DisplayFor(model => model.LastName)
@@ -29,7 +29,7 @@
     </tr>
     <tr>
         <th>
-            Phone Number
+            Telefon numarası
         </th>
         <td>
             @Html.DisplayFor(model => model.PhoneNumber)
@@ -37,7 +37,7 @@
     </tr>
     <tr>
         <th>
-            Category
+            Kategori
         </th>
         <td>
             @Html.DisplayFor(model => model.Category.Name)
@@ -45,7 +45,7 @@
     </tr>
     <tr>
         <th>
-            Date Added
+           Tarih ekle
         </th>
         <td>
             @Model.DateAdded.ToShortDateString()
